--- a/src/Helpers/GlobalStyles.css
+++ b/src/Helpers/GlobalStyles.css
@@ -31,7 +31,6 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-direction: column;
 }
 
 .page-title {
